* Improve tick labels drawing.
* Improve time-ticks (add weeks) and add subticks to its.
* Improve 'fplot' to handle several singularities.
* Add LaTeX command \dfrac{}{}. This is full-sized version of \frac{}{}. Unfortunately, there is no support of nesting (i.e. \dfrac{\dfrac{}{}}{} not working). Contrary, \frac{}{} allow nesting.
* Add mglODEc() -- ODE solver for complex variables.
* Update CMake find_package to find MathGL.
* Increase line width for wired text.
* Update documentation: add description of new commands, add hint @ref{Mixing bitmap and vector output}.
* Name 'all' are reserved in MGL scripts now as synonim of -1.

* INCOMPATIBLE: Replace libmgl-qt by libmgl-qt4 and libmgl-qt5 for resolving conflicts of simultaneously installed both Qt4 and Qt5.
* Minor bugfixes.


2.3.5.1 Released 20 June 2016

* INCOMPATIBLE: library libmgl-qt is removed. You need to use libmgl-qt4 or libmgl-qt5 explicitly now.
* Compatibility changes for latest MS VisualStudio.
* Bugfixes.

2.3.5 Released 16 May 2016

* Greatly update mgltex (by Diego Sejas Viscarra)
	o \MGL@codes: Bugfix: category code for tabulators is changed too
	o \MGL@quality: 9 is accepted as quality value now
	o \MGL@scale: Now accepts any positive value
	o \MGL@test@switch: New command to verify and validate switching arguments
	o \mglTeX: Add a small negative space in the logo, between the "mgl" and "TEX"
	o \mglTeX: Declared now as robust command
	o \mglcomments: Now accepts arguments 0 (equivalent to off) and 1 (equivalent to on), besides the usual off and on
	o \mglgraphics: New command options: gray, mglscale, quality, variant
	o \mglname: Now writes the MGL code line setsize 600 400 to the main script
	o \mglplot: Added \bgroup and \egroup in order to keep changes private
	o New command options: gray, mglscale, quality, variant
	o \mglsettings: Added options gray and variant
	o Now calls the \mglswitch and \mglcomments commands for the switch and comments options, respectively